--- a/charts/karmada-dashboard/templates/karmada-dashboard-init-serviceaccount.yaml
+++ b/charts/karmada-dashboard/templates/karmada-dashboard-init-serviceaccount.yaml
@@ -1,11 +1,11 @@
-{{- $name := include "karmada-dashboard.name" . -}}
+{{- $name := include "ml-platform-admin.name" . -}}
 apiVersion: batch/v1
 kind: Job
 metadata:
   name: {{ $name }}-init-serviceaccount
-  namespace: {{ include "karmada-dashboard.namespace" . }}
+  namespace: {{ include "ml-platform-admin.namespace" . }}
   labels:
-      {{- include "karmada-dashboard.labels" . | nindent 4 }}
+      {{- include "ml-platform-admin.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": post-install
     "helm.sh/hook-weight": "0"
