--- a/deploy/karmada-dashboard-secret.yaml
+++ b/deploy/karmada-dashboard-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 type: kubernetes.io/service-account-token
 metadata:
-  name: karmada-dashboard
+  name: ml-platform-admin
   namespace: karmada-system
   annotations:
-    kubernetes.io/service-account.name: "karmada-dashboard"
+    kubernetes.io/service-account.name: "ml-platform-admin"
