--- a/ui/apps/dashboard/package.json
+++ b/ui/apps/dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@karmada/dashboard",
+  "name": "@ml-platform-admin/dashboard",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
