--- a/artifacts/dashboard/karmada-dashboard-configmap.yaml
+++ b/artifacts/dashboard/karmada-dashboard-configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: karmada-dashboard-configmap
-  namespace: karmada-system
+  name: ml-platform-admin-configmap
+  namespace: ml-platform-system
 data:
   dev.yaml: |-
     docker_registries: []
