--- a/artifacts/dashboard/karmada-dashboard-etcd-headless.yaml
+++ b/artifacts/dashboard/karmada-dashboard-etcd-headless.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: karmada-dashboard-etcd-headless
-  namespace: karmada-system
+  name: ml-platform-admin-etcd-headless
+  namespace: ml-platform-system
   labels:
-    app: karmada-dashboard-etcd
+    app: ml-platform-admin-etcd
 spec:
   ports:
     - name: client
@@ -14,6 +14,6 @@ spec:
       port: 2380
       targetPort: 2380
   selector:
-    app: karmada-dashboard-etcd
+    app: ml-platform-admin-etcd
   clusterIP: None
   publishNotReadyAddresses: true
