--- a/artifacts/dashboard/karmada-dashboard-sa.yaml
+++ b/artifacts/dashboard/karmada-dashboard-sa.yaml
@@ -1,7 +1,7 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: karmada-dashboard
+  name: ml-platform-admin
   annotations:
     rbac.authorization.kubernetes.io/autoupdate: "true"
 roleRef:
@@ -10,14 +10,14 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 subjects:
   - kind: ServiceAccount
-    name: karmada-dashboard
-    namespace: karmada-system
+    name: ml-platform-admin
+    namespace: ml-platform-system
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: karmada-dashboard
-  namespace: karmada-system
+  name: ml-platform-admin
+  namespace: ml-platform-system
   labels:
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
@@ -25,8 +25,8 @@ metadata:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: karmada-dashboard-secret
-  namespace: karmada-system
+  name: ml-platform-admin-secret
+  namespace: ml-platform-system
   annotations:
-    kubernetes.io/service-account.name: karmada-dashboard
+    kubernetes.io/service-account.name: ml-platform-admin
 type: kubernetes.io/service-account-token
