--- a/artifacts/overlays/ingress-mode/kustomization.yaml
+++ b/artifacts/overlays/ingress-mode/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./ingress.yaml
 
 configMapGenerator:
-  - name: karmada-dashboard-configmap
+  - name: ml-platform-admin-configmap
     namespace: karmada-system
     behavior: replace
     files:
@@ -22,11 +22,11 @@ configMapGenerator:
 
 # Uncomment the patch rules to make change to ingress
 #patches:
-#  By default, the ingress-mode will export karmada-dashboard-web with no-domain specified and served with location '/'
+#  By default, the ingress-mode will export ml-platform-admin-web with no-domain specified and served with location '/'
 #  If you want to specify domain or change the location path, you can uncomment the following patch code
 #  - target:
 #      kind: Ingress
-#      name: ingress-karmada-dashboard
+#      name: ingress-ml-platform-admin
 #      namespace: karmada-system
 #    patch: |-
 #      # If you want to specify domain, you can uncomment the first patch rules
@@ -41,7 +41,7 @@ configMapGenerator:
 #  # Uncomment the next two patch rules to add imagePullSecrets to deployment
 #  - target:
 #      kind: Deployment
-#      name: karmada-dashboard-web
+#      name: ml-platform-admin-web
 #      namespace: karmada-system
 #    patch: |-
 #      - op: add
@@ -49,7 +49,7 @@ configMapGenerator:
 #        value: [{ name: regcred }]
 #  - target:
 #        kind: Deployment
-#        name: karmada-dashboard-api
+#        name: ml-platform-admin-api
 #        namespace: karmada-system
 #    patch: |-
 #      - op: add
