--- a/charts/karmada-dashboard/templates/karmada-dashboard-configmap.yaml
+++ b/charts/karmada-dashboard/templates/karmada-dashboard-configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: karmada-dashboard-configmap
-  namespace: {{ include "karmada-dashboard.namespace" . }}
+  name: ml-platform-admin-configmap
+  namespace: {{ include "ml-platform-admin.namespace" . }}
 data:
   dev.yaml: |-
     docker_registries: []
