--- a/charts/karmada-dashboard/templates/karmada-dashboard-serviceaccount-configmap.yaml
+++ b/charts/karmada-dashboard/templates/karmada-dashboard-serviceaccount-configmap.yaml
@@ -1,15 +1,15 @@
-{{- $name := include "karmada-dashboard.name" . -}}
+{{- $name := include "ml-platform-admin.name" . -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ $name }}-serviceaccount-configmap
-  namespace: {{ include "karmada-dashboard.namespace" . }}
+  namespace: {{ include "ml-platform-admin.namespace" . }}
 data:
   serviceaccount: |
     kind: ClusterRoleBinding
     apiVersion: rbac.authorization.k8s.io/v1
     metadata:
-      name: karmada-dashboard
+      name: ml-platform-admin
       annotations:
         rbac.authorization.kubernetes.io/autoupdate: "true"
     roleRef:
@@ -18,15 +18,15 @@ data:
       apiGroup: rbac.authorization.k8s.io
     subjects:
       - kind: ServiceAccount
-        name: karmada-dashboard
-        namespace: {{ include "karmada-dashboard.namespace" . }}
+        name: ml-platform-admin
+        namespace: {{ include "ml-platform-admin.namespace" . }}
 
     ---
     apiVersion: v1
     kind: ServiceAccount
     metadata:
-      name: karmada-dashboard
-      namespace: {{ include "karmada-dashboard.namespace" . }}
+      name: ml-platform-admin
+      namespace: {{ include "ml-platform-admin.namespace" . }}
       labels:
         kubernetes.io/cluster-service: "true"
         addonmanager.kubernetes.io/mode: Reconcile
@@ -35,8 +35,8 @@ data:
     apiVersion: v1
     kind: Secret
     metadata:
-      name: karmada-dashboard-secret
-      namespace: {{ include "karmada-dashboard.namespace" . }}
+      name: ml-platform-admin-secret
+      namespace: {{ include "ml-platform-admin.namespace" . }}
       annotations:
-        kubernetes.io/service-account.name: karmada-dashboard
+        kubernetes.io/service-account.name: ml-platform-admin
     type: kubernetes.io/service-account-token
