--- a/charts/karmada-dashboard/templates/karmada-dashboard-serviceaccount.yaml
+++ b/charts/karmada-dashboard/templates/karmada-dashboard-serviceaccount.yaml
@@ -1,7 +1,7 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: karmada-dashboard
+  name: ml-platform-admin
   annotations:
     rbac.authorization.kubernetes.io/autoupdate: "true"
 roleRef:
@@ -10,15 +10,15 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 subjects:
   - kind: ServiceAccount
-    name: karmada-dashboard
-    namespace: {{ include "karmada-dashboard.namespace" . }}
+    name: ml-platform-admin
+    namespace: {{ include "ml-platform-admin.namespace" . }}
 
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: karmada-dashboard
-  namespace: {{ include "karmada-dashboard.namespace" . }}
+  name: ml-platform-admin
+  namespace: {{ include "ml-platform-admin.namespace" . }}
   labels:
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
@@ -27,8 +27,8 @@ metadata:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: karmada-dashboard-secret
-  namespace: {{ include "karmada-dashboard.namespace" . }}
+  name: ml-platform-admin-secret
+  namespace: {{ include "ml-platform-admin.namespace" . }}
   annotations:
-    kubernetes.io/service-account.name: karmada-dashboard
+    kubernetes.io/service-account.name: ml-platform-admin
 type: kubernetes.io/service-account-token
