--- a/deploy/karmada-dashboard-role.yaml
+++ b/deploy/karmada-dashboard-role.yaml
@@ -1,7 +1,7 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: karmada-dashboard
+  name: ml-platform-admin
   annotations:
     rbac.authorization.kubernetes.io/autoupdate: "true"
 roleRef:
@@ -10,14 +10,14 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 subjects:
   - kind: ServiceAccount
-    name: karmada-dashboard
-    namespace: karmada-system
+    name: ml-platform-admin
+    namespace: ml-platform-system
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: karmada-dashboard
-  namespace: karmada-system
+  name: ml-platform-admin
+  namespace: ml-platform-system
   labels:
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
