--- a/artifacts/dashboard/karmada-dashboard-sa.yaml
+++ b/artifacts/dashboard/karmada-dashboard-sa.yaml
@@ -11,13 +11,13 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: ml-platform-admin
-    namespace: ml-platform-system
+    namespace: karmada-system
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: ml-platform-admin
-  namespace: ml-platform-system
+  namespace: karmada-system
   labels:
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
@@ -26,7 +26,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: ml-platform-admin-secret
-  namespace: ml-platform-system
+  namespace: karmada-system
   annotations:
     kubernetes.io/service-account.name: ml-platform-admin
 type: kubernetes.io/service-account-token
