--- a/artifacts/dashboard/karmada-dashboard-etcd.yaml
+++ b/artifacts/dashboard/karmada-dashboard-etcd.yaml
@@ -90,6 +90,7 @@ metadata:
   name: ml-platform-admin-etcd-data
   namespace: ml-platform-system
 spec:
+  storageClassName: manual-hostpath
   accessModes:
     - ReadWriteOnce
   resources:
